--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -115,7 +115,8 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
-    var urlPrefix=require('/mods/backend').url;
+    // var urlPrefix=require('/mods/backend').url;
+    var urlPrefix='http://10.112.128.63:8080/dispatch';
     var app = new Vue({
         el: '#app',
         data: function () {
@@ -156,6 +157,8 @@
                             localStorage.setItem('token',token);
                             localStorage.setItem('realName',data.data.realName);
                             localStorage.setItem('role',data.data.role);
+                            localStorage.setItem('username',data.data.username);
+                            localStorage.setItem('id',data.data.id);
                             window.location.href="mainPage.html";
                         }else if(data.result===4001){
                             this.$alert('账号或密码错误');
@@ -164,7 +167,7 @@
                             this.$alert('登录失败');
                             this.isLogging=false;
                         } else {
-                            this.$alert('网络错误，请稍后重试');
+                            this.$alert('登录失败');
                             this.isLogging=false;
                         }
                     },
@@ -173,7 +176,7 @@
                     },
                     error: () => {
                         console.log();
-                        this.$alert('网络错误，请稍后重试');
+                        this.$alert('登录失败');
                         this.isLogging=false;
                     }
 
