--- a/BR-MS/RepoManage.html
+++ b/BR-MS/RepoManage.html
@@ -24,6 +24,15 @@
         #search .el-input {
             width: 180px;
         }
+
+        .tips {
+            font-size: 13px;
+            color: #8c939d;
+        }
+
+        .hide {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -51,7 +60,7 @@
                     queryParams[i]='';
                 };
                 search();
-            }">返回
+            }">重置
             </el-button>
         </el-form-item>
     </el-form>
@@ -62,7 +71,7 @@
                     <el-form-item label="国家">
                         <span>{{props.row.country}}</span>
                     </el-form-item>
-                    <el-form-item label="地区">
+                    <el-form-item label="战区">
                         <span>{{props.row.area}}</span>
                     </el-form-item>
                     <el-form-item label="省">
@@ -105,17 +114,20 @@
                            element-loading-text="正在提交" element-loading-background="rgba(0,0,0,0.8)">
                     <el-form ref="editedForm" label-position="right" label-width="100px" :rules="editRule"
                              :model="editedForm">
-                        <el-form-item label="仓库id" prop="warehouse_id">
-                            <el-input v-model="editedForm.warehouse_id" required></el-input>
+                        <el-form-item class="hide" label="仓库id" prop="warehouse_id">
+                            <el-input v-model="editedForm.warehouse_id" :disabled="true" required></el-input>
                         </el-form-item>
                         <el-form-item label="仓库名称" prop="warehouse_name">
                             <el-input v-model="editedForm.warehouse_name"></el-input>
+                            <span class="tips">仓库的名称，若有则填</span>
                         </el-form-item>
                         <el-form-item label="仓库编号" prop="warehouse_code">
                             <el-input v-model="editedForm.warehouse_code"></el-input>
+                            <span class="tips">仓库所属单位对仓库的编号</span>
                         </el-form-item>
                         <el-form-item label="仓库地址" prop="warehouse_location">
                             <el-input v-model="editedForm.warehouse_location" clearable></el-input>
+                            <span class="tips">仓库的大致地址</span>
                         </el-form-item>
                         <el-form-item label="经度" prop="longitude">
                             <el-input v-model="editedForm.longitude" clearable></el-input>
@@ -126,8 +138,9 @@
                         <el-form-item label="国家" prop="country">
                             <el-input v-model="editedForm.country" clearable></el-input>
                         </el-form-item>
-                        <el-form-item label="地区" prop="area">
+                        <el-form-item label="战区" prop="area">
                             <el-input v-model="editedForm.area" clearable></el-input>
+                            <span class="tips">示例：东部/中部/西部...</span>
                         </el-form-item>
                         <el-form-item label="省" prop="province">
                             <el-input v-model="editedForm.province" clearable></el-input>
@@ -140,6 +153,7 @@
                         </el-form-item>
                         <el-form-item label="详细地址" prop="detail_location">
                             <el-input v-model="editedForm.detail_location" clearable></el-input>
+                            <span class="tips">仓库详细精确的地址</span>
                         </el-form-item>
                         <el-form-item>
                             <p style="text-align: right">
@@ -153,8 +167,8 @@
         </el-table-column>
     </el-table>
     <p style="text-align: center">
-        <el-button style="margin-right:150px;" @click="convertPages('previous')">上一页</el-button>
-        <el-button style="margin-left: 150px;" @click="convertPages('next')">下一页</el-button>
+        <el-pagination @current-change="handleCurrentChange" :current-page="pageNum"
+                       :page-size="6" layout="total,prev,pager,next,jumper" :total="total[0]"></el-pagination>
     </p>
     <p style="text-align: center">
         <el-button type="primary" @click="()=>{addDialogVisible=true;}">+ 添加仓库</el-button>
@@ -162,17 +176,17 @@
     <el-dialog :visible.sync="addDialogVisible" v-loading.fullscreen="loading" element-loading-text="正在提交"
                element-loading-background="rgba(0,0,0,0.8)">
         <el-form ref="addForm" label-position="right" label-width="100px" :rules="editRule" :model="addForm">
-            <el-form-item label="仓库id" prop="warehouse_id">
-                <el-input v-model="addForm.warehouse_id" required></el-input>
-            </el-form-item>
             <el-form-item label="仓库名称" prop="warehouse_name">
                 <el-input v-model="addForm.warehouse_name"></el-input>
+                <span class="tips">仓库的名称，若有则填</span>
             </el-form-item>
-            <el-form-item label="仓库编号" prop="warehouse_code">
+            <el-form-item label="仓库编号" prop="warehouse_code" required>
                 <el-input v-model="addForm.warehouse_code"></el-input>
+                <span class="tips">仓库所属单位对仓库的编号</span>
             </el-form-item>
             <el-form-item label="仓库地址" prop="warehouse_location">
                 <el-input v-model="addForm.warehouse_location" clearable></el-input>
+                <span class="tips">仓库的大致地址</span>
             </el-form-item>
             <el-form-item label="经度" prop="longitude">
                 <el-input v-model="addForm.longitude" clearable></el-input>
@@ -182,9 +196,11 @@
             </el-form-item>
             <el-form-item label="国家" prop="country">
                 <el-input v-model="addForm.country" clearable></el-input>
+                <span class="tips"></span>
             </el-form-item>
-            <el-form-item label="地区" prop="area">
+            <el-form-item label="战区" prop="area">
                 <el-input v-model="addForm.area" clearable></el-input>
+                <span class="tips">示例：东部/中部/西部...</span>
             </el-form-item>
             <el-form-item label="省" prop="province">
                 <el-input v-model="addForm.province" clearable></el-input>
@@ -197,6 +213,7 @@
             </el-form-item>
             <el-form-item label="详细地址" prop="detail_location">
                 <el-input v-model="addForm.detail_location" clearable></el-input>
+                <span class="tips">仓库详细精确的地址</span>
             </el-form-item>
             <el-form-item>
                 <p style="text-align: right">
@@ -229,8 +246,33 @@
         county: '',
         detail_location: ''
     };
-    var pageNum = 1, pageSize = 6, maxPage = 0;
+    var pageNum = 1, pageSize = 6, maxPage = 0,total=0,lastPageItems=0;
+    var maxPageRef = [],totalRef=[];
+    var searchKey=null;
     var post = require('/mods/backend');
+
+    function totalCompute(searchKey){
+        if(searchKey){
+            var needed={
+                warehouse_id: searchKey.warehouse_id,
+                warehouse_name: searchKey.warehouse_name,
+                warehouse_code: searchKey.warehouse_code,
+                warehouse_location: searchKey.warehouse_location
+            };
+        }
+        post('/system/get_warehouse', searchKey?{...needed,pageNum:1}:{pageNum:1}, (data) => {
+            maxPage=data.allPages;
+            post('/system/get_warehouse', searchKey?{...needed,pageNum:maxPage}:{pageNum:maxPage}, (data) => {
+                var arr=[],warehouses=data.warehouses;
+                for(var key in warehouses){
+                    arr.push(warehouses[key]);
+                }
+                lastPageItems=arr.length;
+                total=6*(maxPage-1)+lastPageItems;
+                totalRef.push(total);
+            });
+        });
+    }
 
     function getData(page, searchKey) {
         clearData();
@@ -250,44 +292,52 @@
                 }
                 return;
             }
+            totalCompute(searchKey);
+            maxPageRef.push(data.allPages);
             var warehouses = data.warehouses;
-            maxPage = data.allPages;
             for (var item in warehouses) {
                 warehouses[item]['dialogVisible'] = false;
                 warehouses[item]['addDialogVisible'] = false;
                 items.push(warehouses[item]);
             }
             app.initializing = false;
-        })
+        });
+
     }
 
     function clearData() {
         for (let i = 0; i < pageSize; i++) {
             items.pop();
         }
+        for(let i=0;i<maxPageRef.length;i++){
+            maxPageRef.pop();
+        }
+        for(let i=0;i<totalRef.length;i++){
+            totalRef.pop();
+        }
     }
 
-    function pageControl(control) {
+    function pageControl(control,searchKey) {
         if (control === 'previous') {
             if (pageNum <= 1) {
                 return;
             }
             pageNum -= 1;
-            getData.call(app, pageNum);
+            getData.call(app, pageNum,searchKey);
         } else if (control === 'next') {
             if (pageNum >= maxPage) {
                 return;
             }
             pageNum += 1;
-            getData.call(app, pageNum);
+            getData.call(app, pageNum,searchKey);
         } else if (control === 'first') {
             pageNum = 1;
-            getData.call(app, pageNum);
+            getData.call(app, pageNum,searchKey);
         } else if (control === 'last') {
             pageNum = maxPage;
-            getData.call(app, pageNum);
+            getData.call(app, pageNum,searchKey);
         } else if (control === 'stay') {
-            getData.call(app, pageNum);
+            getData.call(app, pageNum,searchKey);
         }
     }
 
@@ -295,11 +345,15 @@
         el: '#app',
         data: function () {
             return {
+                blank:genralForm,
                 loading: false,
                 initializing: true,
                 dialogVisible: false,
                 addDialogVisible: false,
-                page: pageNum,
+                pageNum: pageNum,
+                tempPageNum: null,
+                maxPage: maxPageRef,
+                total:totalRef,
                 repoData: {
                     repoInfo: items
                 },
@@ -323,6 +377,9 @@
             getData.call(app, pageNum);
         },
         methods: {
+            handleCurrentChange: (page) => {
+                getData.call(app, page,searchKey);
+            },
             convertPages: (control) => {
                 pageControl.call(app, control);
             },
@@ -401,7 +458,14 @@
                             type: 'success',
                             message: '删除成功!'
                         });
-                        pageControl.call(this, 'stay');
+                        if(lastPageItems==1&&maxPageRef[0]!=1){
+                            getData(maxPageRef[0]-1);
+                        }else if(lastPageItems==1&&maxPageRef[0]==1){
+
+                        }else{
+                            getData(maxPageRef[0]);
+                        }
+
                     });
                 });
             },
@@ -413,7 +477,8 @@
                     }
                 }
                 console.log(validate);
-                getData(1, validate);
+                searchKey=validate;
+                pageControl.call(this, 'first',validate);
             }
         }
     });
