--- a/BR-MS/mainPage.html
+++ b/BR-MS/mainPage.html
@@ -123,6 +123,12 @@
             width: 100%;
             height: 100%;
         }
+
+        .logout{
+            margin:0;
+            padding:3px;
+        }
+
     </style>
 </head>
 <body>
@@ -137,6 +143,7 @@
             <img src="res/user-avatar.png">
             <div>
                 <span class="user-name">{{user.name}}</span>
+                <el-button class="logout" type="warning" size="mini" @click="logout">注销</el-button>
                 <el-tag type="primary">{{roleText}}</el-tag>
             </div>
         </div>
@@ -174,9 +181,19 @@
 </body>
 <script src="lib/vue.js"></script>
 <script src="lib/eleme-index.js"></script>
+<script src="res/dependencies.js"></script>
 <script>
+    function judgeLogin(){
+        post('/common/getms',{
+            pageNum:1
+        },(data,err)=>{
+            if(err.id===post.NOT_LOGIN){
+                window.location.href='login.html';
+            }
+        })
+    }
     var roles = require('/mods/roles');
-
+    var post=require('/mods/backend');
     var app = new Vue({
         el: '#app',
         data: {
@@ -195,6 +212,7 @@
             }
         },
         created: function() {
+            judgeLogin();
             this.user.name = localStorage.getItem('realName');
             if(this.user.name==null){
                 window.location.href='login.html';
@@ -205,10 +223,16 @@
         },
         methods: {
             isMenuGroup: function (menu) {
+                judgeLogin();
                 return ('menus' in menu);
             },
             handleSelect: function (url) {
+                judgeLogin();
                 this.router = url;
+            },
+            logout:function(){
+                localStorage.clear();
+                window.location.href="login.html";
             }
         }
     });
